--- a/ffstyles.css
+++ b/ffstyles.css
@@ -6,7 +6,7 @@ body {
 }
 
 h1 {
-    color: #4CAF50;
+    ;
 }
 
 input[type=number] {
@@ -27,13 +27,13 @@ button {
     margin: 10px 5px;
     border: none;
     border-radius: 4px;
-    background-color: #4CAF50;
+    background-color: #007BFF;
     color: white;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #0056b3;
 }
 
 #resultFraction {
