--- a/ffstyles.css
+++ b/ffstyles.css
@@ -1,34 +1,34 @@
 body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
     font-family: Arial, sans-serif;
-    margin: 20px;
-    background-color: #f4f4f9;
-    color: #333;
+    background-color: #f0f0f0;
 }
 
-h1 {
-    ;
-}
-
-input[type=number] {
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    width: 250px; /* Match the width of the scale */
-    box-sizing: border-box;
+.container {
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
+    text-align: center;
+    background-color: #fff;
 }
 
 .button-container {
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 button {
-    padding: 10px 15px;
-    margin: 10px 5px;
-    border: none;
-    border-radius: 4px;
+    padding: 10px 20px;
+    margin: 5px;
     background-color: #007BFF;
     color: white;
+    border: none;
+    border-radius: 5px;
     cursor: pointer;
 }
 
@@ -36,63 +36,40 @@ button:hover {
     background-color: #0056b3;
 }
 
-#resultFraction {
-    margin-top: 20px;
-    font-size: 1.2em;
-}
-
-#scale {
-    width: 250px; /* Adjusted width for 1 inch */
+.scale {
+    position: relative;
+    width: 100%;
     height: 50px;
     border: 1px solid #000;
-    position: relative;
     margin-top: 20px;
-    background-color: #fff;
 }
 
 .tick {
-    height: 10px;
+    position: absolute;
+    height: 100%;
     width: 1px;
     background-color: black;
-    position: absolute;
-    bottom: 0;
 }
 
 .tick-1-2 {
-    height: 30px; /* Longer for 1/2 inch */
-    background-color: black;
+    height: 100%;
 }
 
 .tick-1-4 {
-    height: 25px; /* Longer for 1/4 inch */
-    background-color: black;
+    height: 75%;
 }
 
 .tick-1-8 {
-    height: 20px; /* Longer for 1/8 inch */
-    background-color: black;
+    height: 50%;
 }
 
 .tick-1-16 {
-    height: 15px; /* Shorter for 1/16 inch */
-    background-color: black;
+    height: 25%;
 }
 
 .pointer {
-    height: 50px;
-    width: 1px;
-    background-color: red;
     position: absolute;
-    bottom: 0;
-}
-
-/* Hide arrows in number input */
-input[type=number]::-webkit-outer-spin-button,
-input[type=number]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-
-input[type=number] {
-    -moz-appearance: textfield;
+    height: 100%;
+    width: 2px;
+    background-color: red;
 }
